--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,6 @@ plotly>=5.3.1
 gunicorn==20.1.0
 dash_bootstrap_components>=1.2.1
 python-dotenv>=0.20.0
+sqlalchemy>=1.4.37
+sqlalchemy-cockroachdb>=1.4.3
+python-jose>=3.3.0 
