--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,5 @@ dash_bootstrap_components>=1.2.1
 python-dotenv>=0.20.0
 sqlalchemy>=1.4.37
 sqlalchemy-cockroachdb>=1.4.3
-python-jose>=3.3.0 
+python-jose>=3.3.0
+psycopg2-binary>=2.9.3 
